--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../../../favicon.ico">
 
-    <title>Leo's Website</title>
+    <title>Gabriela's Website</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -27,8 +27,8 @@
   <body>
 
         <div class="align-items-center p-3 px-md-4 mb-3 bg-white box-shadow" style="text-align: center">
-      <h5 class="font-weight-normal float-left" style="margin-top: 8px">Leo's Website</h5>
-      <a class="btn btn-outline-primary float-right" href="#">SAY HI</a>
+      <h5 class="font-weight-normal float-left" style="margin-top: 8px">Gabriela's Website</h5>
+      <a class="btn btn-outline-primary float-right" href="#">mailto:"gkassing@salesforce.com"> SAY HI</a> 
     </div>
 
     <div class="container">
@@ -37,16 +37,16 @@
         <div class="col-12 col-sm-4">
           <img class="portrait center" src="me.jpg"></img>
           <div class="portrait-text">
-          <h4 class="pt-line">Leo Klenner</h4>
+          <h4 class="pt-line">Gabriela Kassing</h4>
           <p class="pt-line">Business Development Associate</p>
           <p class="pt-line"><a href="https://www.salesforce.com/">Salesforce</a></p>
-          <p><a href="#" class="fa fa-linkedin big-icon" style="margin-right: 10px"></a><a href="#" class="fa fa-envelope big-icon"></a></p>
+          <p><a href="https://www.linkedin.com/in/gabrielakassing/" class="fa fa-linkedin big-icon" style="margin-right: 10px"></a><a href="#" class="fa fa-envelope big-icon"></a></p>
         </div>
       </div>
     <div class="col-12 col-sm-8">
       <h1>About me</h1>
-      <p>Hi my name is Leo and I'm a Business Development Associate at Salesforce!</p>
-      <p>I joined the <a href="https://www.salesforce.com/">Salesforce</a> Ohana in May 2020. Before that I worked in Washington, DC as a Research Fellow and taught a course at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. I started my career working odd jobs in the entertainment sector.</p>
+      <p>Hi my name is Gabriela and I'm a Business Development Associate at Salesforce!</p>
+      <p>I joined the <a href="https://www.salesforce.com/">Salesforce</a> Ohana in Feburary 2020. Before that I worked in Washington, DC as a Research Fellow and taught a course at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. I started my career working odd jobs in the entertainment sector.</p>
       <p>I'm passionate about helping organizations and their workforce blaze new trails with groundbreaking enterprise software. At Salesforce, I'm excited to work as part of stellar team to accelerate digital transformation and create thriving businesses in the process.</p>
       <p>I'm an avid learner and relish the chance to explore new fields. This is my personal website where I document some of my learnings in occasional blog posts. Views my own. Always happy to connect.</p>
     </div>
@@ -133,10 +133,11 @@
       </div>
             <div class="row" style="text-align: left; padding-left: 15px; padding-right: 15px; padding-top: 1rem">
         <div class="col-12 col-sm-4 py-0 px-0 pb-3">
-          <span><a href="mailto:hi@mapcontrol.io">lklenner@salesforce.com</a></span>
+          <span><a href="mailto:hi@mapcontrol.io">gkassing@salesforce.com</a></span>
         </div>
         <div class="col-6 col-sm-4 py-0 px-0 pb-3 cent-first">
-          <span>&copy 2020 Leo Klenner</span>
+          <span>&copy 2020 Gabriela Kassing
+          </span>
         </div>
           <div class="col-6 col-sm-4 py-0 px-0 pb-3 right-first">
           <span>Malaho!</span>
