--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="align-items-center p-3 px-md-4 mb-3 bg-white box-shadow" style="text-align: center">
       <h5 class="font-weight-normal float-left" style="margin-top: 8px">Gabriela's Website</h5>
-      <a class="btn btn-outline-primary float-right" href="#">mailto:"gkassing@salesforce.com"> SAY HI</a> 
+      <a class="btn btn-outline-primary float-right" href="mailto:"gkassing@salesforce.com"">SAY HI</a> 
     </div>
 
     <div class="container">
@@ -49,26 +49,6 @@
       <p>I joined the <a href="https://www.salesforce.com/">Salesforce</a> Ohana in Feburary 2020. Before that I worked in Washington, DC as a Research Fellow and taught a course at <a href="https://www.jhu.edu/">Johns Hopkins University</a>. I started my career working odd jobs in the entertainment sector.</p>
       <p>I'm passionate about helping organizations and their workforce blaze new trails with groundbreaking enterprise software. At Salesforce, I'm excited to work as part of stellar team to accelerate digital transformation and create thriving businesses in the process.</p>
       <p>I'm an avid learner and relish the chance to explore new fields. This is my personal website where I document some of my learnings in occasional blog posts. Views my own. Always happy to connect.</p>
-    </div>
-  </div>
-  <div class="row" style="margin-top: 3rem">
-        <div class="col-12 col-sm-4">
-          <h2 class="cent-first">Recent Posts</h2>
-        </div>
-    <div class="col-12 col-sm-8">
-            <div class="card box-shadow" style="margin-bottom: 1rem">
-      <div class="card-body">
-      <h4 class="card-title"><a>First Blog Post</a></h4>
-      <p class="card-text">In this post I talk about leads, leads and leads.</p>
-  </div>
-</div>
-<div class="card box-shadow">
-      <div class="card-body">
-      <h4 class="card-title"><a>Second Blog Post</a></h4>
-      <p class="card-text">Yeah, you guessed it, let's talk leads.</p>
-  </div>
-</div>
-
     </div>
   </div>
 
